# PrettyDD

./: .gitignore  BUILD.md  CMakeLists.txt  Damagelogger.sln  Damagelogger.vcxproj.filters  INSTALL.md  README.md
Damagelogger/: CMakeLists.txt  Damagelogger.vcxproj  Damagelogger.vcxproj.filters  Me hit by monster.txt  Other hit by nano.txt  You hit other.txt  main.cpp  parse.cpp  parse.h  player.cpp  player.h
source/: CMakeLists.txt  affected_player.cpp  affected_player.h  affected_player_factory.h  affected_player_factory_interface.h  affected_player_interface.h  affected_player_vector.cpp  affected_player_vector.h  base_player.h  base_vector.h  command.h  command_handler.cpp  command_handler.h  configuration.cpp  configuration.h  console_reader.cpp  console_reader.h  damage.cpp  damage.h  damage_info.h  damage_writer.cpp  damage_writer.h  definitions.h  formatted_line.cpp  formatted_line.h  formatted_line_interface.h  heal.cpp  heal.h  help_writer.cpp  help_writer.h  line_info.cpp  line_info.h  log_line.cpp  log_line.h  log_reading.h  logger.cpp  logger.h  main.cpp  my_time.cpp  my_time.h  (+40 more)
src/: CMakeLists.txt  line.h  main.cpp
test/: CMakeLists.txt  Other hit by other.txt  affected_player_test.cpp  affected_player_vector_test.cpp  base_vector_test.cpp  command_handler_test.cpp  console_reader_test.cpp  damage_test.cpp  example_lines.txt  formatted_line_stub.h  formatted_line_test.cpp  full_auto.txt  heal_test.cpp  log.txt  me_cast_nano.txt  me_hit_by_nano.txt  nano_programs_test.cpp  nano_test.cpp  parser_XP_test.cpp  parser_chat_test.cpp  parser_health_test.cpp  parser_meCastNano_test.cpp  parser_meGotHealth_test.cpp  parser_meGotNano_test.cpp  parser_meGotSK_test.cpp  parser_meGotXP_test.cpp  parser_meHitByEnvironment_test.cpp  parser_meHitByMonster_test.cpp  parser_meHitByNano_test.cpp  parser_meHitByPlayer_test.cpp  parser_meHitBy_test.cpp  parser_misses_test.cpp  parser_nano_test.cpp  parser_otherAndYourPetHitByOther_test.cpp  parser_otherAndYourPetHitBy_test.cpp  parser_otherHitByNano_test.cpp  parser_otherMisses_test.cpp  parser_param_test.cpp  parser_param_test.h  parser_renameSpecial_test.cpp  (+19 more)
